--- a/Pages/camisa.html
+++ b/Pages/camisa.html
@@ -1,11 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    camisa
-</body>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Brito´s - Produtos</title>
+    <link rel="stylesheet" href="../css/camisa.css">
+  </head>
+  <body>
+    <header>
+      <h1>Brito´s</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Início</a></li>
+          <li><a href="produtos.html" class="active">Produtos</a></li>
+          <li><a href="login.html">Login</a></li>
+          <li><a href="cadastro.html">Cadastro</a></li>
+        </ul>
+      </nav>
+      <button id="toggleCarrinho" class="btn-carrinho">
+        🛒 Carrinho (<span id="quantidade">0</span>)
+      </button>
+    </header>
+
+    <main>
+ 
+      <section class="produtos">
+        <h2>Todos os Produtos</h2>
+        <div class="grid">
+          <div class="produto">
+            <img src="../assets/camisaverao.jpg" alt="Produto 1" />
+            <h3>Camisa Verao</h3>
+            <p class="preco">R$ 59.90</p>
+            <button class="add-carrinho">Adicionar ao carrinho</button>
+          </div>
+
+          <div class="produto">
+            <img src="../assets/camisaoutono.jpeg" alt="Produto 2" />
+            <h3>Camisa Outono</h3>
+            <p class="preco">R$ 120.00</p>
+            <button class="add-carrinho">Adicionar ao carrinho</button>
+          </div>
+
+          <div class="produto">
+            <img src="./assets/jaqueta.jpg" alt="Produto 3" />
+            <h3>Camisa Primavera</h3>
+            <p class="preco">R$ 89.90</p>
+            <button class="add-carrinho">Adicionar ao carrinho</button>
+          </div>
+
+          <div class="produto">
+            <img src="./assets/vestidofloral.png" alt="Produto 4" />
+            <h3>Camisa old school</h3>
+            <p class="preco">R$ 199.90</p>
+            <button class="add-carrinho">Adicionar ao carrinho</button>
+          </div>
+
+            <div class="produto">
+            <img src="./assets/jaqueta.jpg" alt="Produto 1" />
+            <h3>Camisa aberta</h3>
+            <p class="preco">R$ 59.90</p>
+            <button class="add-carrinho">Adicionar ao carrinho</button>
+          </div>
+
+          <div class="produto">
+            <img src="./assets/vestidofloral.png" alt="Produto 2" />
+            <h3>Camisa de linho</h3>
+            <p class="preco">R$ 120.00</p>
+            <button class="add-carrinho">Adicionar ao carrinho</button>
+          </div>
+
+          <div class="produto">
+            <img src="./assets/jaqueta.jpg" alt="Produto 3" />
+            <h3>Camisa florada</h3>
+            <p class="preco">R$ 89.90</p>
+            <button class="add-carrinho">Adicionar ao carrinho</button>
+          </div>
+
+          <div class="produto">
+            <img src="./assets/vestidofloral.png" alt="Produto 4" />
+            <h3>Camisa lisa</h3>
+            <p class="preco">R$ 199.90</p>
+            <button class="add-carrinho">Adicionar ao carrinho</button>
+          </div>
+        </div>
+
+      </section>
+    </main>
+
+    <!-- Carrinho lateral -->
+    <aside id="carrinho" class="carrinho">
+      <h2>Meu Carrinho</h2>
+      <ul id="listaCarrinho"></ul>
+      <div class="total">
+        <strong>Total: R$ <span id="total">0.00</span></strong>
+      </div>
+      <div class="botoes-carrinho">
+        <button id="fecharCarrinho" class="btn-fechar">Minimizar</button>
+        <button id="pagarCarrinho" class="btn-pagar">Fazer Pagamento</button>
+      </div>
+      <!-- Modal de alerta -->
+      <div id="alertaCarrinho" class="modal">
+        <div class="modal-content">
+          <p>🛒 Seu carrinho está vazio!</p>
+          <button id="fecharAlerta">Fechar</button>
+        </div>
+      </div>
+    </aside>
+
+    <footer>
+      <p>&copy; 2025 Brito´s - Todos os direitos reservados</p>
+    </footer>
+
+    <script src="../scripts/carrinho.js"></script>
+  </body>
 </html>
