--- a/cadastro.html
+++ b/cadastro.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastro - Brito's</title>
   <link rel="stylesheet" href="./css/cadastro.css">
+  <script src="./scripts/cadastro.js" defer></script>
 </head>
 <body>
   <header>
