Atualizando projeto com minhas alterações

--- a/Pages/camisa.html
+++ b/Pages/camisa.html
@@ -11,10 +11,10 @@
       <h1>Brito´s</h1>
       <nav>
         <ul>
-          <li><a href="index.html">Início</a></li>
-          <li><a href="produtos.html" class="active">Produtos</a></li>
-          <li><a href="login.html">Login</a></li>
-          <li><a href="cadastro.html">Cadastro</a></li>
+          <li><a href="../index.html">Início</a></li>
+          <li><a href="../produtos.html" class="active">Produtos</a></li>
+          <li><a href="../login.html">Login</a></li>
+          <li><a href="../cadastro.html">Cadastro</a></li>
         </ul>
       </nav>
       <button id="toggleCarrinho" class="btn-carrinho">
@@ -28,56 +28,56 @@
         <h2>Todos os Produtos</h2>
         <div class="grid">
           <div class="produto">
-            <img src="../assets/camisaverao.jpg" alt="Produto 1" />
+            <img src="../assets/camisas/camisaveraoproduto1.jpeg" alt="Produto 1" />
             <h3>Camisa Verao</h3>
             <p class="preco">R$ 59.90</p>
             <button class="add-carrinho">Adicionar ao carrinho</button>
           </div>
 
           <div class="produto">
-            <img src="../assets/camisaoutono.jpeg" alt="Produto 2" />
+            <img src="../assets/camisas/camisaoutono.jpeg" alt="Produto 2" />
             <h3>Camisa Outono</h3>
             <p class="preco">R$ 120.00</p>
             <button class="add-carrinho">Adicionar ao carrinho</button>
           </div>
 
           <div class="produto">
-            <img src="./assets/jaqueta.jpg" alt="Produto 3" />
+            <img src="../assets/camisas/camisaprimaveraproduto3.jpg" alt="Produto 3" />
             <h3>Camisa Primavera</h3>
             <p class="preco">R$ 89.90</p>
             <button class="add-carrinho">Adicionar ao carrinho</button>
           </div>
 
           <div class="produto">
-            <img src="./assets/vestidofloral.png" alt="Produto 4" />
+            <img src="../assets/camisas/camisaoldschoollproduto4.jpg" alt="Produto 4" />
             <h3>Camisa old school</h3>
             <p class="preco">R$ 199.90</p>
             <button class="add-carrinho">Adicionar ao carrinho</button>
           </div>
 
             <div class="produto">
-            <img src="./assets/jaqueta.jpg" alt="Produto 1" />
+            <img src="../assets/camisas/camisaabertaproduto5.jpeg" alt="Produto 5" />
             <h3>Camisa aberta</h3>
             <p class="preco">R$ 59.90</p>
             <button class="add-carrinho">Adicionar ao carrinho</button>
           </div>
 
           <div class="produto">
-            <img src="./assets/vestidofloral.png" alt="Produto 2" />
+            <img src="../assets/camisas/camisadelinhoproduto6.jpeg" alt="Produto 6" />
             <h3>Camisa de linho</h3>
             <p class="preco">R$ 120.00</p>
             <button class="add-carrinho">Adicionar ao carrinho</button>
           </div>
 
           <div class="produto">
-            <img src="./assets/jaqueta.jpg" alt="Produto 3" />
+            <img src="../assets/camisas/camisafloradaproduto7.jpeg" alt="Produto 7" />
             <h3>Camisa florada</h3>
             <p class="preco">R$ 89.90</p>
             <button class="add-carrinho">Adicionar ao carrinho</button>
           </div>
 
           <div class="produto">
-            <img src="./assets/vestidofloral.png" alt="Produto 4" />
+            <img src="../assets/camisas/camisalisaproduto8.jpeg" alt="Produto 8" />
             <h3>Camisa lisa</h3>
             <p class="preco">R$ 199.90</p>
             <button class="add-carrinho">Adicionar ao carrinho</button>
@@ -96,8 +96,8 @@
       </div>
       <div class="botoes-carrinho">
         <button id="fecharCarrinho" class="btn-fechar">Minimizar</button>
-        <button id="pagarCarrinho" class="btn-pagar">Fazer Pagamento</button>
-      </div>
+        <a href="../Pages/pagamento.html" class="btn-pagar" id="pagarCarrinho">Fazer Pagamento</a>
+      </div> 
       <!-- Modal de alerta -->
       <div id="alertaCarrinho" class="modal">
         <div class="modal-content">
