--- a/Pages/calca.html
+++ b/Pages/calca.html
@@ -1,11 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Brito´s - Calças</title>
+  <link rel="stylesheet" href="../css/calca.css">
 </head>
 <body>
-    calca
+  <header>
+    <h1>Brito´s</h1>
+    <nav>
+      <ul>
+          <li><a href="../index.html">Início</a></li>
+          <li><a href="../produtos.html" class="active">Produtos</a></li>
+          <li><a href="../login.html">Login</a></li>
+          <li><a href="../cadastro.html">Cadastro</a></li>
+        </ul>
+    </nav>
+    <button id="toggleCarrinho" class="btn-carrinho">
+      🛒 Carrinho (<span id="quantidade">0</span>)
+    </button>
+  </header>
+
+  <main>
+    <section class="produtos">
+      <h2>Calças</h2>
+      <div class="grid">
+        <div class="produto">
+          <img src="../assets/calcas/calcajeansslimproduto1.jpeg" alt="Calça Jeans Slim" />
+          <h3>Calça Jeans Slim</h3>
+          <p class="preco">R$ 159,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="../assets/calcas/calcasocialproduto2.jpeg" alt="Calça Social" />
+          <h3>Calça Social</h3>
+          <p class="preco">R$ 199,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="../assets/calcas/calcajoggerproduto3.jpeg" alt="Calça Jogger" />
+          <h3>Calça Jogger</h3>
+          <p class="preco">R$ 129,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="../assets/calcas/calcacargoproduto4.jpeg" alt="Calça Cargo" />
+          <h3>Calça Cargo</h3>
+          <p class="preco">R$ 179,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="../assets/calcas/calcaskinnyproduto5.jpeg" alt="Calça Skinny" />
+          <h3>Calça Skinny</h3>
+          <p class="preco">R$ 149,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="../assets/calcas/calcaflareproduto6.jpeg" alt="Calça Flare" />
+          <h3>Calça Flare</h3>
+          <p class="preco">R$ 169,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="../assets/calcas/calcadelinhoproduto7.jpeg" alt="Calça de Linho" />
+          <h3>Calça de Linho</h3>
+          <p class="preco">R$ 189,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="../assets/calcas/calcaalfaiatariaproduto8.jpeg" alt="Calça Alfaiataria" />
+          <h3>Calça Alfaiataria</h3>
+          <p class="preco">R$ 219,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- Carrinho lateral -->
+  <aside id="carrinho" class="carrinho">
+    <h2>Meu Carrinho</h2>
+    <ul id="listaCarrinho"></ul>
+    <div class="total">
+      <strong>Total: R$ <span id="total">0.00</span></strong>
+    </div>
+    <div class="botoes-carrinho">
+        <button id="fecharCarrinho" class="btn-fechar">Minimizar</button>
+        <a href="../Pages/pagamento.html" class="btn-pagar" id="pagarCarrinho">Fazer Pagamento</a>
+      </div> 
+    <!-- Modal de alerta -->
+    <div id="alertaCarrinho" class="modal">
+      <div class="modal-content">
+        <p>🛒 Seu carrinho está vazio!</p>
+        <button id="fecharAlerta">Fechar</button>
+      </div>
+    </div>
+  </aside>
+
+  <footer>
+    <p>&copy; 2025 Brito´s - Todos os direitos reservados</p>
+  </footer>
+
+  <script src="../scripts/carrinho.js"></script>
 </body>
 </html>
