--- a/produtos.html
+++ b/produtos.html
@@ -27,10 +27,10 @@
         <h2>Filtros</h2>
         <div class="filtro">
           <h3>Categorias</h3>
-          <a href="pages/camisa.html"><button>Camisas</button></a>
-          <a href="pages/calca.html"><button>Calças</button></a>
-          <a href="pages/vestido.html"><button>Vestidos</button></a>
-          <a href="pages/tenis.html"><button>Tênis</button></a>
+          <a href="Pages/camisa.html"><button>Camisas</button></a>
+          <a href="Pages/calca.html"><button>Calças</button></a>
+          <a href="Pages/vestido.html"><button>Vestidos</button></a>
+          <a href="Pages/tenis.html"><button>Tênis</button></a>
         </div>
 
         <div class="filtro">
@@ -46,33 +46,240 @@
         <h2>Todos os Produtos</h2>
         <div class="grid">
           <div class="produto">
-            <img src="./assets/jaqueta.jpg" alt="Produto 1" />
-            <h3>Camisa Básica</h3>
+            <img src="..//Projeto-Front-end/assets/camisas/camisaveraoproduto1.jpeg" alt="Produto 1" />
+            <h3>Camisa Verao</h3>
             <p class="preco">R$ 59.90</p>
             <button class="add-carrinho">Adicionar ao carrinho</button>
           </div>
 
           <div class="produto">
-            <img src="./assets/vestidofloral.png" alt="Produto 2" />
-            <h3>Calça Jeans</h3>
+            <img src="..//Projeto-Front-end/assets/camisas/camisaoutono.jpeg" alt="Produto 2" />
+            <h3>Camisa Outono</h3>
             <p class="preco">R$ 120.00</p>
             <button class="add-carrinho">Adicionar ao carrinho</button>
           </div>
 
           <div class="produto">
-            <img src="./assets/jaqueta.jpg" alt="Produto 3" />
-            <h3>Vestido Floral</h3>
+            <img src="..//Projeto-Front-end/assets/camisas/camisaprimaveraproduto3.jpg" alt="Produto 3" />
+            <h3>Camisa Primavera</h3>
             <p class="preco">R$ 89.90</p>
             <button class="add-carrinho">Adicionar ao carrinho</button>
           </div>
 
           <div class="produto">
-            <img src="./assets/vestidofloral.png" alt="Produto 4" />
-            <h3>Tênis Branco</h3>
+            <img src="..//Projeto-Front-end/assets/camisas/camisaoldschoollproduto4.jpg" alt="Produto 4" />
+            <h3>Camisa old school</h3>
+            <p class="preco">R$ 199.90</p>
+            <button class="add-carrinho">Adicionar ao carrinho</button>
+          </div>
+
+            <div class="produto">
+            <img src="..//Projeto-Front-end/assets/camisas/camisaabertaproduto5.jpeg" alt="Produto 5" />
+            <h3>Camisa aberta</h3>
+            <p class="preco">R$ 59.90</p>
+            <button class="add-carrinho">Adicionar ao carrinho</button>
+          </div>
+
+          <div class="produto">
+            <img src="..//Projeto-Front-end/assets/camisas/camisadelinhoproduto6.jpeg" alt="Produto 6" />
+            <h3>Camisa de linho</h3>
+            <p class="preco">R$ 120.00</p>
+            <button class="add-carrinho">Adicionar ao carrinho</button>
+          </div>
+
+          <div class="produto">
+            <img src="..//Projeto-Front-end/assets/camisas/camisafloradaproduto7.jpeg" alt="Produto 7" />
+            <h3>Camisa florada</h3>
+            <p class="preco">R$ 89.90</p>
+            <button class="add-carrinho">Adicionar ao carrinho</button>
+          </div>
+
+          <div class="produto">
+            <img src="..//Projeto-Front-end/assets/camisas/camisalisaproduto8.jpeg" alt="Produto 8" />
+            <h3>Camisa lisa</h3>
             <p class="preco">R$ 199.90</p>
             <button class="add-carrinho">Adicionar ao carrinho</button>
           </div>
         </div>
+
+        <h2>Calça</h2>
+        <div class="grid">
+        <div class="produto">
+          <img src="..//Projeto-Front-end/assets/calcas/calcajeansslimproduto1.jpeg" alt="Calça Jeans Slim" />
+          <h3>Calça Jeans Slim</h3>
+          <p class="preco">R$ 159,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="..//Projeto-Front-end/assets/calcas/calcasocialproduto2.jpeg" alt="Calça Social" />
+          <h3>Calça Social</h3>
+          <p class="preco">R$ 199,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="..//Projeto-Front-end/assets/calcas/calcajoggerproduto3.jpeg" alt="Calça Jogger" />
+          <h3>Calça Jogger</h3>
+          <p class="preco">R$ 129,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="..//Projeto-Front-end/assets/calcas/calcacargoproduto4.jpeg" alt="Calça Cargo" />
+          <h3>Calça Cargo</h3>
+          <p class="preco">R$ 179,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="..//Projeto-Front-end/assets/calcas/calcaskinnyproduto5.jpeg" alt="Calça Skinny" />
+          <h3>Calça Skinny</h3>
+          <p class="preco">R$ 149,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="..//Projeto-Front-end/assets/calcas/calcaflareproduto6.jpeg" alt="Calça Flare" />
+          <h3>Calça Flare</h3>
+          <p class="preco">R$ 169,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="..//Projeto-Front-end/assets/calcas/calcadelinhoproduto7.jpeg" alt="Calça de Linho" />
+          <h3>Calça de Linho</h3>
+          <p class="preco">R$ 189,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="..//Projeto-Front-end/assets/calcas/calcaalfaiatariaproduto8.jpeg" alt="Calça Alfaiataria" />
+          <h3>Calça Alfaiataria</h3>
+          <p class="preco">R$ 219,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+      </div>
+
+       <h2>Vestido</h2>
+      <div class="grid">
+        <div class="produto">
+          <img src="..//Projeto-Front-end/assets/vestidos/vestidofloralproduto1.jpeg" alt="Vestido Floral" />
+          <h3>Vestido Floral</h3>
+          <p class="preco">R$ 149,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="..//Projeto-Front-end/assets/vestidos/vestidolongoproduto2.jpeg" alt="Vestido Longo Elegante" />
+          <h3>Vestido Longo Elegante</h3>
+          <p class="preco">R$ 179,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="..//Projeto-Front-end/assets/vestidos/vestidocurtoproduto3.jpeg" alt="Vestido Curto Casual" />
+          <h3>Vestido Curto Casual</h3>
+          <p class="preco">R$ 129,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="..//Projeto-Front-end/assets/vestidos/vestidodefestaproduto4.jpeg" alt="Vestido de Festa" />
+          <h3>Vestido de Festa</h3>
+          <p class="preco">R$ 219,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="..//Projeto-Front-end/assets/vestidos/vestidojeansproduto5.jpeg" alt="Vestido Jeans" />
+          <h3>Vestido Jeans</h3>
+          <p class="preco">R$ 139,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="..//Projeto-Front-end/assets/vestidos/vestidodeveraoproduto6.jpeg" alt="Vestido de Verão" />
+          <h3>Vestido de Verão</h3>
+          <p class="preco">R$ 119,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="..//Projeto-Front-end/assets/vestidos/vestidolistradoproduto7.jpeg" alt="Vestido Midi Listrado" />
+          <h3>Vestido Midi Listrado</h3>
+          <p class="preco">R$ 159,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="..//Projeto-Front-end/assets/vestidos/vestidoderendaproduto8.jpeg" alt="Vestido de Renda" />
+          <h3>Vestido de Renda</h3>
+          <p class="preco">R$ 189,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+      </div>
+
+      <h2>Tênis</h2>
+      <div class="grid">
+        <div class="produto">
+          <img src="..//Projeto-Front-end/assets/tenis/tenisesportivoproduto1.jpeg" alt="Tênis Esportivo" />
+          <h3>Tênis Esportivo</h3>
+          <p class="preco">R$ 199,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="..//Projeto-Front-end/assets/tenis/teniscasualproduto2.jpeg" alt="Tênis Casual" />
+          <h3>Tênis Casual</h3>
+          <p class="preco">R$ 159,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="..//Projeto-Front-end/assets/tenis/tenisdecorridaproduto3.jpeg" alt="Tênis de Corrida" />
+          <h3>Tênis de Corrida</h3>
+          <p class="preco">R$ 229,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="..//Projeto-Front-end/assets/tenis/tenisconfortproduto4.jpeg" alt="Tênis Confort" />
+          <h3>Tênis Confort</h3>
+          <p class="preco">R$ 179,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="..//Projeto-Front-end/assets/tenis/tenisstreetproduto5.jpeg" alt="Tênis Street" />
+          <h3>Tênis Street</h3>
+          <p class="preco">R$ 189,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="..//Projeto-Front-end/assets/tenis/tenismodernoproduto6.jpeg" alt="Tênis Moderno" />
+          <h3>Tênis Moderno</h3>
+          <p class="preco">R$ 209,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="..//Projeto-Front-end/assets/tenis/tenisfashionproduto7.jpeg" alt="Tênis Fashion" />
+          <h3>Tênis Fashion</h3>
+          <p class="preco">R$ 219,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+
+        <div class="produto">
+          <img src="..//Projeto-Front-end/assets/tenis/tenisclassicoproduto8.jpeg" alt="Tênis Clássico" />
+          <h3>Tênis Clássico</h3>
+          <p class="preco">R$ 179,90</p>
+          <button class="add-carrinho">Adicionar ao carrinho</button>
+        </div>
+      </div>
+
+
       </section>
     </main>
 
@@ -85,8 +292,9 @@
       </div>
       <div class="botoes-carrinho">
         <button id="fecharCarrinho" class="btn-fechar">Minimizar</button>
-        <button id="pagarCarrinho" class="btn-pagar">Fazer Pagamento</button>
-      </div>
+        <a href="./Pages/pagamento.html" class="btn-pagar" id="pagarCarrinho">Fazer Pagamento</a>
+      </div> 
+      
       <!-- Modal de alerta -->
       <div id="alertaCarrinho" class="modal">
         <div class="modal-content">
