--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <li><a href="#contato">Contato</a></li>
       </ul>
     </nav>
+
+    
   </header>
 
   <!-- BANNER -->
@@ -57,7 +59,15 @@
 
   <!-- RODAPÉ -->
   <footer id="contato">
-    <p>&copy; 2025 Brito's - Todos os direitos reservados</p>
+    <div class="footer-content">
+      <p>&copy; 2025 Brito's - Todos os direitos reservados</p>
+      <div class="contato-info">
+        <p><strong>Contato:</strong></p>
+        <p>Email: Debritoscomerce@gmail.com</p>
+        <p>Telefone: (21) 97692-6199</p>
+        <p>Endereço: Rua De Britos, 123 - Rio de Janeiro, RJ</p>
+      </div>
+    </div>
   </footer>
 
   <script src="./scripts/javascript.js"></script>
