--- a/produtos.html
+++ b/produtos.html
@@ -32,70 +32,62 @@
           <a href="Pages/vestido.html"><button>Vestidos</button></a>
           <a href="Pages/tenis.html"><button>Tênis</button></a>
         </div>
-
-        <div class="filtro">
-          <h3>Tamanho</h3>
-          <button>P</button>
-          <button>M</button>
-          <button>G</button>
-          <button>GG</button>
-        </div>
       </aside>
 
       <section class="produtos">
         <h2>Todos os Produtos</h2>
         <div class="grid">
           <div class="produto">
-            <img src="..//Projeto-Front-end/assets/camisas/camisaveraoproduto1.jpeg" alt="Produto 1" />
+            <img src="assets/camisas/camisaveraoproduto1.jpeg" alt="Produto 1" />
             <h3>Camisa Verao</h3>
             <p class="preco">R$ 59.90</p>
             <button class="add-carrinho">Adicionar ao carrinho</button>
           </div>
 
           <div class="produto">
-            <img src="..//Projeto-Front-end/assets/camisas/camisaoutono.jpeg" alt="Produto 2" />
+            <img src="assets/camisas/camisaoutono.jpeg" alt="Produto 2" />
             <h3>Camisa Outono</h3>
             <p class="preco">R$ 120.00</p>
             <button class="add-carrinho">Adicionar ao carrinho</button>
           </div>
 
           <div class="produto">
-            <img src="..//Projeto-Front-end/assets/camisas/camisaprimaveraproduto3.jpg" alt="Produto 3" />
+            <img src="assets/camisas/camisaprimaveraproduto3.jpg" alt="Produto 3" />
             <h3>Camisa Primavera</h3>
             <p class="preco">R$ 89.90</p>
             <button class="add-carrinho">Adicionar ao carrinho</button>
           </div>
 
           <div class="produto">
-            <img src="..//Projeto-Front-end/assets/camisas/camisaoldschoollproduto4.jpg" alt="Produto 4" />
+            <img src="assets/camisas/camisaoldschoollproduto4.jpg" alt="Produto 4" />
             <h3>Camisa old school</h3>
             <p class="preco">R$ 199.90</p>
             <button class="add-carrinho">Adicionar ao carrinho</button>
           </div>
 
             <div class="produto">
-            <img src="..//Projeto-Front-end/assets/camisas/camisaabertaproduto5.jpeg" alt="Produto 5" />
+            <img src="assets/camisas/camisaabertaproduto5.jpeg" alt="Produto 5" />
             <h3>Camisa aberta</h3>
             <p class="preco">R$ 59.90</p>
             <button class="add-carrinho">Adicionar ao carrinho</button>
           </div>
 
           <div class="produto">
-            <img src="..//Projeto-Front-end/assets/camisas/camisadelinhoproduto6.jpeg" alt="Produto 6" />
+            <img src="assets/camisas/camisadelinhoproduto6.jpeg" alt="Produto 6" />
             <h3>Camisa de linho</h3>
             <p class="preco">R$ 120.00</p>
             <button class="add-carrinho">Adicionar ao carrinho</button>
           </div>
 
           <div class="produto">
-            <img src="..//Projeto-Front-end/assets/camisas/camisafloradaproduto7.jpeg" alt="Produto 7" />
+            <img src="assets/camisas/camisafloradaproduto7.jpeg" alt="Produto 7" />
             <h3>Camisa florada</h3>
             <p class="preco">R$ 89.90</p>
             <button class="add-carrinho">Adicionar ao carrinho</button>
           </div>
 
           <div class="produto">
-            <img src="..//Projeto-Front-end/assets/camisas/camisalisaproduto8.jpeg" alt="Produto 8" />
+            <img src="assets/camisas/camisalisaproduto8.jpeg" alt="Produto 8" />
             <h3>Camisa lisa</h3>
             <p class="preco">R$ 199.90</p>
             <button class="add-carrinho">Adicionar ao carrinho</button>
@@ -105,56 +97,56 @@
         <h2>Calça</h2>
         <div class="grid">
         <div class="produto">
-          <img src="..//Projeto-Front-end/assets/calcas/calcajeansslimproduto1.jpeg" alt="Calça Jeans Slim" />
+          <img src="assets/calcas/calcajeansslimproduto1.jpeg" alt="Calça Jeans Slim" />
           <h3>Calça Jeans Slim</h3>
           <p class="preco">R$ 159,90</p>
           <button class="add-carrinho">Adicionar ao carrinho</button>
         </div>
 
         <div class="produto">
-          <img src="..//Projeto-Front-end/assets/calcas/calcasocialproduto2.jpeg" alt="Calça Social" />
+          <img src="assets/calcas/calcasocialproduto2.jpeg" alt="Calça Social" />
           <h3>Calça Social</h3>
           <p class="preco">R$ 199,90</p>
           <button class="add-carrinho">Adicionar ao carrinho</button>
         </div>
 
         <div class="produto">
-          <img src="..//Projeto-Front-end/assets/calcas/calcajoggerproduto3.jpeg" alt="Calça Jogger" />
+          <img src="assets/calcas/calcajoggerproduto3.jpeg" alt="Calça Jogger" />
           <h3>Calça Jogger</h3>
           <p class="preco">R$ 129,90</p>
           <button class="add-carrinho">Adicionar ao carrinho</button>
         </div>
 
         <div class="produto">
-          <img src="..//Projeto-Front-end/assets/calcas/calcacargoproduto4.jpeg" alt="Calça Cargo" />
+          <img src="assets/calcas/calcacargoproduto4.jpeg" alt="Calça Cargo" />
           <h3>Calça Cargo</h3>
           <p class="preco">R$ 179,90</p>
           <button class="add-carrinho">Adicionar ao carrinho</button>
         </div>
 
         <div class="produto">
-          <img src="..//Projeto-Front-end/assets/calcas/calcaskinnyproduto5.jpeg" alt="Calça Skinny" />
+          <img src="assets/calcas/calcaskinnyproduto5.jpeg" alt="Calça Skinny" />
           <h3>Calça Skinny</h3>
           <p class="preco">R$ 149,90</p>
           <button class="add-carrinho">Adicionar ao carrinho</button>
         </div>
 
         <div class="produto">
-          <img src="..//Projeto-Front-end/assets/calcas/calcaflareproduto6.jpeg" alt="Calça Flare" />
+          <img src="assets/calcas/calcaflareproduto6.jpeg" alt="Calça Flare" />
           <h3>Calça Flare</h3>
           <p class="preco">R$ 169,90</p>
           <button class="add-carrinho">Adicionar ao carrinho</button>
         </div>
 
         <div class="produto">
-          <img src="..//Projeto-Front-end/assets/calcas/calcadelinhoproduto7.jpeg" alt="Calça de Linho" />
+          <img src="assets/calcas/calcadelinhoproduto7.jpeg" alt="Calça de Linho" />
           <h3>Calça de Linho</h3>
           <p class="preco">R$ 189,90</p>
           <button class="add-carrinho">Adicionar ao carrinho</button>
         </div>
 
         <div class="produto">
-          <img src="..//Projeto-Front-end/assets/calcas/calcaalfaiatariaproduto8.jpeg" alt="Calça Alfaiataria" />
+          <img src="assets/calcas/calcaalfaiatariaproduto8.jpeg" alt="Calça Alfaiataria" />
           <h3>Calça Alfaiataria</h3>
           <p class="preco">R$ 219,90</p>
           <button class="add-carrinho">Adicionar ao carrinho</button>
@@ -164,56 +156,56 @@
        <h2>Vestido</h2>
       <div class="grid">
         <div class="produto">
-          <img src="..//Projeto-Front-end/assets/vestidos/vestidofloralproduto1.jpeg" alt="Vestido Floral" />
+          <img src="assets/vestidos/vestidofloralproduto1.jpeg" alt="Vestido Floral" />
           <h3>Vestido Floral</h3>
           <p class="preco">R$ 149,90</p>
           <button class="add-carrinho">Adicionar ao carrinho</button>
         </div>
 
         <div class="produto">
-          <img src="..//Projeto-Front-end/assets/vestidos/vestidolongoproduto2.jpeg" alt="Vestido Longo Elegante" />
+          <img src="assets/vestidos/vestidolongoproduto2.jpeg" alt="Vestido Longo Elegante" />
           <h3>Vestido Longo Elegante</h3>
           <p class="preco">R$ 179,90</p>
           <button class="add-carrinho">Adicionar ao carrinho</button>
         </div>
 
         <div class="produto">
-          <img src="..//Projeto-Front-end/assets/vestidos/vestidocurtoproduto3.jpeg" alt="Vestido Curto Casual" />
+          <img src="assets/vestidos/vestidocurtoproduto3.jpeg" alt="Vestido Curto Casual" />
           <h3>Vestido Curto Casual</h3>
           <p class="preco">R$ 129,90</p>
           <button class="add-carrinho">Adicionar ao carrinho</button>
         </div>
 
         <div class="produto">
-          <img src="..//Projeto-Front-end/assets/vestidos/vestidodefestaproduto4.jpeg" alt="Vestido de Festa" />
+          <img src="assets/vestidos/vestidodefestaproduto4.jpeg" alt="Vestido de Festa" />
           <h3>Vestido de Festa</h3>
           <p class="preco">R$ 219,90</p>
           <button class="add-carrinho">Adicionar ao carrinho</button>
         </div>
 
         <div class="produto">
-          <img src="..//Projeto-Front-end/assets/vestidos/vestidojeansproduto5.jpeg" alt="Vestido Jeans" />
+          <img src="assets/vestidos/vestidojeansproduto5.jpeg" alt="Vestido Jeans" />
           <h3>Vestido Jeans</h3>
           <p class="preco">R$ 139,90</p>
           <button class="add-carrinho">Adicionar ao carrinho</button>
         </div>
 
         <div class="produto">
-          <img src="..//Projeto-Front-end/assets/vestidos/vestidodeveraoproduto6.jpeg" alt="Vestido de Verão" />
+          <img src="assets/vestidos/vestidodeveraoproduto6.jpeg" alt="Vestido de Verão" />
           <h3>Vestido de Verão</h3>
           <p class="preco">R$ 119,90</p>
           <button class="add-carrinho">Adicionar ao carrinho</button>
         </div>
 
         <div class="produto">
-          <img src="..//Projeto-Front-end/assets/vestidos/vestidolistradoproduto7.jpeg" alt="Vestido Midi Listrado" />
+          <img src="assets/vestidos/vestidolistradoproduto7.jpeg" alt="Vestido Midi Listrado" />
           <h3>Vestido Midi Listrado</h3>
           <p class="preco">R$ 159,90</p>
           <button class="add-carrinho">Adicionar ao carrinho</button>
         </div>
 
         <div class="produto">
-          <img src="..//Projeto-Front-end/assets/vestidos/vestidoderendaproduto8.jpeg" alt="Vestido de Renda" />
+          <img src="assets/vestidos/vestidoderendaproduto8.jpeg" alt="Vestido de Renda" />
           <h3>Vestido de Renda</h3>
           <p class="preco">R$ 189,90</p>
           <button class="add-carrinho">Adicionar ao carrinho</button>
@@ -223,56 +215,56 @@
       <h2>Tênis</h2>
       <div class="grid">
         <div class="produto">
-          <img src="..//Projeto-Front-end/assets/tenis/tenisesportivoproduto1.jpeg" alt="Tênis Esportivo" />
+          <img src="assets/tenis/tenisesportivoproduto1.jpeg" alt="Tênis Esportivo" />
           <h3>Tênis Esportivo</h3>
           <p class="preco">R$ 199,90</p>
           <button class="add-carrinho">Adicionar ao carrinho</button>
         </div>
 
         <div class="produto">
-          <img src="..//Projeto-Front-end/assets/tenis/teniscasualproduto2.jpeg" alt="Tênis Casual" />
+          <img src="assets/tenis/teniscasualproduto2.jpeg" alt="Tênis Casual" />
           <h3>Tênis Casual</h3>
           <p class="preco">R$ 159,90</p>
           <button class="add-carrinho">Adicionar ao carrinho</button>
         </div>
 
         <div class="produto">
-          <img src="..//Projeto-Front-end/assets/tenis/tenisdecorridaproduto3.jpeg" alt="Tênis de Corrida" />
+          <img src="assets/tenis/tenisdecorridaproduto3.jpeg" alt="Tênis de Corrida" />
           <h3>Tênis de Corrida</h3>
           <p class="preco">R$ 229,90</p>
           <button class="add-carrinho">Adicionar ao carrinho</button>
         </div>
 
         <div class="produto">
-          <img src="..//Projeto-Front-end/assets/tenis/tenisconfortproduto4.jpeg" alt="Tênis Confort" />
+          <img src="assets/tenis/tenisconfortproduto4.jpeg" alt="Tênis Confort" />
           <h3>Tênis Confort</h3>
           <p class="preco">R$ 179,90</p>
           <button class="add-carrinho">Adicionar ao carrinho</button>
         </div>
 
         <div class="produto">
-          <img src="..//Projeto-Front-end/assets/tenis/tenisstreetproduto5.jpeg" alt="Tênis Street" />
+          <img src="assets/tenis/tenisstreetproduto5.jpeg" alt="Tênis Street" />
           <h3>Tênis Street</h3>
           <p class="preco">R$ 189,90</p>
           <button class="add-carrinho">Adicionar ao carrinho</button>
         </div>
 
         <div class="produto">
-          <img src="..//Projeto-Front-end/assets/tenis/tenismodernoproduto6.jpeg" alt="Tênis Moderno" />
+          <img src="assets/tenis/tenismodernoproduto6.jpeg" alt="Tênis Moderno" />
           <h3>Tênis Moderno</h3>
           <p class="preco">R$ 209,90</p>
           <button class="add-carrinho">Adicionar ao carrinho</button>
         </div>
 
         <div class="produto">
-          <img src="..//Projeto-Front-end/assets/tenis/tenisfashionproduto7.jpeg" alt="Tênis Fashion" />
+          <img src="assets/tenis/tenisfashionproduto7.jpeg" alt="Tênis Fashion" />
           <h3>Tênis Fashion</h3>
           <p class="preco">R$ 219,90</p>
           <button class="add-carrinho">Adicionar ao carrinho</button>
         </div>
 
         <div class="produto">
-          <img src="..//Projeto-Front-end/assets/tenis/tenisclassicoproduto8.jpeg" alt="Tênis Clássico" />
+          <img src="assets/tenis/tenisclassicoproduto8.jpeg" alt="Tênis Clássico" />
           <h3>Tênis Clássico</h3>
           <p class="preco">R$ 179,90</p>
           <button class="add-carrinho">Adicionar ao carrinho</button>
@@ -304,9 +296,17 @@
       </div>
     </aside>
 
-    <footer>
-      <p>&copy; 2025 Brito´s - Todos os direitos reservados</p>
-    </footer>
+      <footer id="contato">
+    <div class="footer-content">
+      <p>&copy; 2025 Brito's - Todos os direitos reservados</p>
+      <div class="contato-info">
+        <p><strong>Contato:</strong></p>
+        <p>Email: Debritoscomerce@gmail.com</p>
+        <p>Telefone: (21) 97692-6199</p>
+        <p>Endereço: Rua De Britos, 123 - Rio de Janeiro, RJ</p>
+      </div>
+    </div>
+  </footer>
 
     <script src="./scripts/carrinho.js"></script>
   </body>
