adicionado dark mode em todas as paginas

--- a/Pages/calca.html
+++ b/Pages/calca.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Brito´s - Calças</title>
   <link rel="stylesheet" href="../css/calca.css">
+  <link rel="stylesheet" href="../darkmode/filtro.css">
 </head>
 <body>
   <header>
@@ -20,6 +21,10 @@
     <button id="toggleCarrinho" class="btn-carrinho">
       🛒 Carrinho (<span id="quantidade">0</span>)
     </button>
+
+    <!-- Botão Modo Dark -->
+  <button id="dark-mode-toggle">🌙</button>
+
   </header>
 
   <main>
@@ -110,5 +115,6 @@
   </footer>
 
   <script src="../scripts/carrinho.js"></script>
+  <script src="../scripts/darkmode.js"></script>
 </body>
 </html>
