--- a/Pages/pagamento.html
+++ b/Pages/pagamento.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/pagamento.css">
+    <link rel="stylesheet" href="../darkmode/pagamento.css">
     
     <title>Pagamento</title>
 </head>
 <body>
+
+   <!-- Botão Modo Dark -->
+  <button id="dark-mode-toggle">🌙</button>
   
 
   <div class="checkout-container">
@@ -64,5 +68,7 @@
     </div>
   </div>
 <script src="../scripts/pagamento.js" defer></script>
+<script src="../scripts/darkmode.js" defer></script>
+
 </body>
 </html>
