--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Brito's - Início</title>
   <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./darkmode/inicio.css">
+
 </head>
 <body>
   <!-- HEADER -->
@@ -19,6 +21,9 @@
         <li><a href="cadastro.html">Cadastre-se</a></li>
       </ul>
     </nav>
+
+     <!-- Botão Modo Dark -->
+  <button id="dark-mode-toggle">🌙</button>
 
     
   </header>
@@ -71,5 +76,7 @@
   </footer>
 
   <script src="./scripts/javascript.js"></script>
+  <script src="./scripts/darkmode.js"></script>
+
 </body>
 </html>
