--- a/login.html
+++ b/login.html
@@ -5,11 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - Brito's</title>
   <link rel="stylesheet" href="./css/styleslogin.css">
-  <script src="./scripts/login.js" defer></script>
+  <link rel="stylesheet" href="./darkmode/login.css">
+ 
 </head>
 <body>
   <header>
     <h1>Brito's</h1>
+    
+     <!-- Botão Modo Dark -->
+  <button id="dark-mode-toggle">🌙</button>
+
   </header>
 
   <div class="container">
@@ -36,5 +41,9 @@
   <footer>
     <p>&copy; 2025 Brito's - Todos os direitos reservados</p>
   </footer>
+
+  <script src="./scripts/login.js" defer></script>
+  <script src="./scripts/darkmode.js"></script>
+
 </body>
 </html>
