--- a/produtos.html
+++ b/produtos.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brito´s - Produtos</title>
     <link rel="stylesheet" href="./css/produtos.css" />
+    <link rel="stylesheet" href="./darkmode/produtos.css" />
+  
+
   </head>
   <body>
     <header>
@@ -20,6 +23,12 @@
       <button id="toggleCarrinho" class="btn-carrinho">
         🛒 Carrinho (<span id="quantidade">0</span>)
       </button>
+
+       <!-- Botão Modo Dark -->
+  <button id="dark-mode-toggle">🌙</button>
+
+
+      
     </header>
 
     <main>
@@ -309,5 +318,7 @@
   </footer>
 
     <script src="./scripts/carrinho.js"></script>
+    <script src="./scripts/darkmode.js"></script>
+
   </body>
 </html>
