--- a/Pages/vestido.html
+++ b/Pages/vestido.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Brito´s - Vestidos</title>
   <link rel="stylesheet" href="../css/vestido.css">
+  <link rel="stylesheet" href="../darkmode/filtro.css">
+</head>
 </head>
 <body>
   <header>
@@ -20,6 +22,10 @@
     <button id="toggleCarrinho" class="btn-carrinho">
       🛒 Carrinho (<span id="quantidade">0</span>)
     </button>
+
+     <!-- Botão Modo Dark -->
+  <button id="dark-mode-toggle">🌙</button>
+
   </header>
 
   <main>
@@ -110,5 +116,6 @@
   </footer>
 
   <script src="../scripts/carrinho.js"></script>
+  <script src="../scripts/darkmode.js"></script>
 </body>
 </html>
