--- a/cadastro.html
+++ b/cadastro.html
@@ -5,11 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastro - Brito's</title>
   <link rel="stylesheet" href="./css/cadastro.css">
-  <script src="./scripts/cadastro.js" defer></script>
+  <link rel="stylesheet" href="./darkmode/cadastro.css">
+  
 </head>
 <body>
   <header>
     <h1>Brito's</h1>
+    
+     <!-- Botão Modo Dark -->
+  <button id="dark-mode-toggle">🌙</button>
+
   </header>
 
   <div class="container">
@@ -29,5 +34,10 @@
   <footer>
     <p>&copy; 2025 Brito's - Todos os direitos reservados</p>
   </footer>
+
+  <script src="./scripts/cadastro.js" defer></script>
+  <script src="./scripts/darkmode.js"></script>
+
+
 </body>
 </html> 
