--- a/cadastro.html
+++ b/cadastro.html
@@ -32,7 +32,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2025 Brito's - Todos os direitos reservados</p>
+    <p><strong>&copy; 2025 Brito's - Todos os direitos reservados</strong></p>
   </footer>
 
   <script src="./scripts/cadastro.js" defer></script>
