--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- HEADER -->
   <header>
     <h1>Brito's</h1>
-    <nav>
+    <nav class="header-texto">
       <ul>
         <li><a href="index.html">Início</a></li>
         <li><a href="produtos.html">Produtos</a></li>
@@ -32,7 +32,7 @@
   <section class="banner">
     <div class="banner-content">
       <h2>Nova Coleção 2025</h2>
-      <p>Estilo, conforto e qualidade para o seu dia a dia</p>
+      <p><strong>Estilo, conforto e qualidade para o seu dia a dia</strong></p>
       <button onclick="window.location.href='produtos.html'">Ver Produtos</button>
     </div>
   </section>
@@ -65,12 +65,12 @@
   <!-- RODAPÉ -->
   <footer id="contato">
     <div class="footer-content">
-      <p>&copy; 2025 Brito's - Todos os direitos reservados</p>
+      <p><strong>&copy; 2025 Brito's - Todos os direitos reservados</strong></p>
       <div class="contato-info">
         <p><strong>Contato:</strong></p>
-        <p>Email: Debritoscomerce@gmail.com</p>
-        <p>Telefone: (21) 97692-6199</p>
-        <p>Endereço: Rua De Britos, 123 - Rio de Janeiro, RJ</p>
+        <p><strong>Email: debritoscomerce@gmail.com</strong></p>
+        <p><strong><Telefone:>Telefone: (21) 97692-6199</strong></p>
+        <p><strong><Endereço:>Endereço: Rua de Britos, 123 - Rio de Janeiro, RJ</strong></p>
       </div>
     </div>
   </footer>
