--- a/login.html
+++ b/login.html
@@ -39,7 +39,9 @@
   </div>
 
   <footer>
-    <p>&copy; 2025 Brito's - Todos os direitos reservados</p>
+    <div class="texto-footer">
+    <p><strong>&copy; 2025 Brito's - Todos os direitos reservados</strong></p>
+    </div>
   </footer>
 
   <script src="./scripts/login.js" defer></script>
