--- a/produtos.html
+++ b/produtos.html
@@ -305,14 +305,15 @@
       </div>
     </aside>
 
-      <footer id="contato">
+     <!-- RODAPÉ -->
+  <footer id="contato">
     <div class="footer-content">
-      <p>&copy; 2025 Brito's - Todos os direitos reservados</p>
+      <p><strong>&copy; 2025 Brito's - Todos os direitos reservados</strong></p>
       <div class="contato-info">
         <p><strong>Contato:</strong></p>
-        <p>Email: Debritoscomerce@gmail.com</p>
-        <p>Telefone: (21) 97692-6199</p>
-        <p>Endereço: Rua De Britos, 123 - Rio de Janeiro, RJ</p>
+        <p><strong>Email: debritoscomerce@gmail.com</strong></p>
+        <p><strong><Telefone:>Telefone: (21) 97692-6199</strong></p>
+        <p><strong><Endereço:>Endereço: Rua de Britos, 123 - Rio de Janeiro, RJ</strong></p>
       </div>
     </div>
   </footer>
