--- a/Pages/camisa.html
+++ b/Pages/camisa.html
@@ -113,7 +113,7 @@
     </aside>
 
     <footer>
-      <p>&copy; 2025 Brito´s - Todos os direitos reservados</p>
+      <p><strong>&copy; 2025 Brito´s - Todos os direitos reservados</strong></p>
     </footer>
 
     <script src="../scripts/carrinho.js"></script>
