--- a/Pages/tenis.html
+++ b/Pages/tenis.html
@@ -110,9 +110,9 @@
     </div>
   </aside>
 
-  <footer>
-    <p>&copy; 2025 Brito´s - Todos os direitos reservados</p>
-  </footer>
+ <footer>
+      <p><strong>&copy; 2025 Brito´s - Todos os direitos reservados</strong></p>
+    </footer>
 
   <script src="../scripts/carrinho.js"></script>
   <script src="../scripts/darkmode.js"></script>
