--- a/Pages/vestido.html
+++ b/Pages/vestido.html
@@ -112,8 +112,8 @@
   </aside>
 
   <footer>
-    <p>&copy; 2025 Brito´s - Todos os direitos reservados</p>
-  </footer>
+      <p><strong>&copy; 2025 Brito´s - Todos os direitos reservados</strong></p>
+    </footer>
 
   <script src="../scripts/carrinho.js"></script>
   <script src="../scripts/darkmode.js"></script>
